@@ -36,6 +36,8 @@ CREATE TABLE developers (
   id int generated by default as identity (start with +10000),
   name varchar(100) default NULL,
   salary int default 70000,
+  created_at timestamp default NULL,
+  updated_at timestamp default NULL,
   PRIMARY KEY (id)
 );
 
