@@ -37,6 +37,8 @@ CREATE TABLE `developers` (
   `id` int(11) NOT NULL auto_increment,
   `name` varchar(100) default NULL,
   `salary` int(11) default 70000,
+  `created_at` datetime default NULL,
+  `updated_at` datetime default NULL,
   PRIMARY KEY  (`id`)
 ) TYPE=InnoDB;
 
